bk_ida/gccida/c0/enqueue_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/enqueue_insn/src/expr.c:793:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)var), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/enqueue_insn/src/expr.c:793:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)var), 
                 ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/enqueue_insn/src/obj/expr.o] Error 1
